2012-02-27 Doug Simons <doug.simons@testplant.com>
	Merged to trunk by: greg.casamento@gmail.com
	
	* Source/NSXMLDocument.m: Fix bugs in setCharacterEncoding: and
	copyWithZone: that cause a memory crash when tree is freed.
	Doug Simons <doug.simons@testplant.com>

2012-02-27  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m (+_objectForNode:): Get the actual class from
	the document.
	* Source/NSXMLNode.m (-description): Add a simple description method.
	* Source/NSXMLDocument.m: Further cleanup. Exchange the contents of
	-initWithData:... and initWithXMLString:...

2012-02-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSArchiver.m:
	* Source/NSUnarchiver.m:
	Alter to support encoding and decoding arrays with NSUInteger counts
	(ie more than 2^32 objects if on a 64bit system).

2012-02-26  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSData.m: Various 64-bit compatibility fixes, mostly changing
	unsgined to NSUInteger.

2012-02-26  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m (execute_xpath): Use correct node for
	relative paths.
	* Source/NSXMLNode.m (isEqualTree): Correct equality test to
	ignore siblings.
	* Source/NSXMLNode.m (+elementWithName:stringValue:): Correct
	recursive call.
	Patch by Ivan Vučica <ivucica@gmail.com>
	* Source/NSXMLElement.m: Add FIXME comments for name space methods.

2012-02-23  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLElement.m: Implement namespace methods.

2012-02-22  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m (-_nodeFollowingInNaturalDirection:): Correct
	this method.
	* Source/NSXMLDocument.m,
	* Source/NSXMLElement.m: Clean up children methods.

2012-02-22  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSXMLNode.m: Further clean up.
	* Source/NSXMLDTDNode.m (-initWithXMLString:): Move comment about
	missing code to here.
	* Source/NSXMLElement.m (-initWithName:stringValue:): Move subnode
	creation to here.

2012-02-21  Fred Kiefer <FredKiefer@gmx.de>
