@@ -937,14 +937,11 @@ NSArray *execute_xpath(NSXMLNode *xmlNode,
 - (id) copyWithZone: (NSZone*)zone
 {
   id c = [[self class] allocWithZone: zone];
-  xmlNodePtr newNode = xmlCopyNode([self _node], 1); // make a deep copy
+  // make a deep copy
+  xmlNodePtr newNode = xmlCopyNode([self _node], 2);
   clearPrivatePointers(newNode);
 
-  //c = [c initWithKind: internal->kind options: internal->options];
-  //[c _setNode: newNode];
   c = [c _initWithNode: newNode kind: internal->kind];
-
-  
 
 //  [c setName: [self name]];
 //  [c setURI: [self URI]];
